# OSLabsRepository

./: README.md
1lab/: CMakeLists.txt  README.md  creator.cpp  main.cpp  reporter.cpp  test_creator.cpp  test_main.cpp  test_reporter.cpp
2lab/: CMakeLists.txt  README.md  array_processing.cpp  array_processing.h  array_processing_test.cpp  main.cpp
3lab/: CMakeLists.txt  function.cpp  function.h  main.cpp  unit.cpp
4lab/: CMakeLists.txt  Receiver.cpp  Sender.cpp  unit.cpp
5lab/: CMakeLists.txt  Client.cpp  EmployeeTests.cpp  EmployeeUtils.cpp  EmployeeUtils.h  Server.cpp
